--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,6 +2,16 @@
 layout: default
 ---
 
+<p class="post-excerpt">
+
+{% if post.content contains '<!--excerpt.start-->' and post.content contains '<!--excerpt.end-->' %}
+	{{ ((post.content | split:'<!--excerpt.start-->' | last) | split: '<!--excerpt.end-->' | first) | strip_html | truncatewords: 20 }}
+{% else %}
+	{{ post.content | strip_html | truncatewords: 20 }}
+{% endif %}
+
+</p>
+
 <div class="content">
   {% include pagination-newer.html %}
 
