--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,6 +7,9 @@ layout: default
 <div class="content">
 	
 	
+{% include list-categories-count.html %}
+	
+	
   {% include pagination-newer.html %}
 
   {{ content }}
