--- a/_sass/hydeout/_variables.scss
+++ b/_sass/hydeout/_variables.scss
@@ -47,5 +47,5 @@ $code-color: #bf616a !default;
 // Hyde theming
 //$sidebar-bg-color: #202020 !default;
 $sidebar-bg-color: #ac4142 !default;
-$sidebar-sticky: true !default;
-$layout-reverse: true !default;
+$sidebar-sticky: false !default;
+$layout-reverse: false !default;
