--- a/_includes/list-categories-count.html
+++ b/_includes/list-categories-count.html
@@ -3,7 +3,7 @@
 {% assign categories_list = site.categories %}
   {% if categories_list.first[0] == null %}
     {% for category in categories_list %}
-      <li><a href="#{{ category }}">{{ category | capitalize }} ({{ site.tags[category].size }})</a></li>
+      <li>{{ category | capitalize }} ({{ site.tags[category].size }} articles )</li>
     {% endfor %}
   {% else %}
     {% for category in categories_list %}
