--- a/_includes/list-categories-count.html
+++ b/_includes/list-categories-count.html
@@ -1,4 +1,5 @@
-<h2>Categories</h2>
+<h1>Sommaire</h1>
+<h2>Catégories</h2>
 <ul>
 {% assign categories_list = site.categories %}
   {% if categories_list.first[0] == null %}
