--- a/_includes/list-categories-count.html
+++ b/_includes/list-categories-count.html
@@ -1,7 +1,5 @@
 
-<header>
-  <h1 class="post-title">Sommaire</h1>
-</header>
+<h1 >Sommaire</h1>
 <h2>Catégories</h2>
 <ul>
 {% assign categories_list = site.categories %}
