--- a/_sass/hydeout/_variables.scss
+++ b/_sass/hydeout/_variables.scss
@@ -45,7 +45,6 @@ $code-font-family: Menlo, Monaco, "Courier New", monospace !default;
 $code-color: #bf616a !default;
 
 // Hyde theming
-//$sidebar-bg-color: #202020 !default;
-$sidebar-bg-color: #ac4142 !default;
+$sidebar-bg-color: #202020 !default;
 $sidebar-sticky: false !default;
-$layout-reverse: false !default;
+$layout-reverse: true !default;
