--- a/_sass/hydeout/_variables.scss
+++ b/_sass/hydeout/_variables.scss
@@ -47,4 +47,4 @@ $code-color: #bf616a !default;
 // Hyde theming
 $sidebar-bg-color: #202020 !default;
 $sidebar-sticky: false !default;
-$layout-reverse: true !default;
+$layout-reverse: false !default;
