--- a/_includes/all-post.html
+++ b/_includes/all-post.html
@@ -1,4 +1,4 @@
-{% for post in paginator.posts %}
+{% for post in site.posts %}
   <article class="post-body">
     <h2 class="post-title">
       <a href="{{ site.baseurl }}{{ post.url }}">
